Applied patch by richy_rich which removes BAlerts from jpeg and jpeg2000 translators. Fixes bug #3044

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@31873 a95241bf-73f2-0310-859d-f6bbb57e9c96